<!DOCTYPE resources [
    <!-- Non-breaking space, U+00A0. -->
    <!ENTITY nbsp "&#160;">
    ]>
<resources>
    <string name="app_name">First Android App</string>
    <string name="onboarding_view_pager_text_1">Осень 2021&nbsp;г., СПбГУ</string>
    <string name="onboarding_view_pager_text_2">Мы изучаем разработку под Android</string>
    <string name="onboarding_view_pager_text_3">Добро пожаловать в команду</string>
    <string name="onboarding_sign_in_button_text">Войти</string>
    <string name="onboarding_sign_up_button_text">Зарегистрироваться</string>
    <string name="bottom_navigation_menu_home">Лента</string>
    <string name="bottom_navigation_menu_people">Люди</string>
    <string name="bottom_navigation_menu_favorite">Нравится</string>
    <string name="bottom_navigation_menu_bookmarks">Закладки</string>
    <string name="bottom_navigation_menu_profile">Профиль</string>
    <string name="sign_in_email_text_layout_hint">Электронная почта</string>
    <string name="sign_in_password_text_layout_hint">Пароль</string>
    <string name="sign_in_sign_in_button_text">Войти</string>
    <string name="sign_in_back_alert_dialog_text">В случае выхода данные пропадут</string>
    <string name="sign_in_back_alert_dialog_no_button_text">Отмена</string>
    <string name="sign_in_back_alert_dialog_ok_button_text">Продолжить</string>
    <string name="sign_up_terms_and_conditions_template">Я принимаю %s</string>
    <string name="sign_up_club_terms_and_conditions">правила клуба</string>
    <string name="sign_up_nickname_text_layout_hint">Имя пользователя</string>
    <string name="sign_up_lastname_text_layout_hint">Фамилия</string>
    <string name="sign_up_firstname_text_layout_hint">Имя</string>
    <string name="sign_up_sign_up_button_text">Зарегистрироваться</string>
    <string name="email_confirmation_text">Код подтверждения выслан вам на почту</string>
    <string name="confirm_code_text">Подтвердить код</string>
    <string name="open_mail_application_text">Открыть почту</string>
    <string name="resend_confirmation_code_template">Выслать код повторно</string>
    <string name="resend_confirmation_code_timer_template">Выслать код повторно можно будет через N секунд</string>
    <string name="news_toolbar_title">Новости</string>
    <string name="profile_logout_button_text">Выйти</string>
    <string name="logout_error_message">Что-то пошло не так</string>
    <string name="common_counter_prefix">+%1$d</string>
    <string name="confirmation_code_timer_template">"Выслать код повторно можно будет через %1$d секунд"</string>
    <string name="resend_confirmation_code_message">Вы можете запросить повторную отправку кода</string>
</resources>