<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/emailConfirmationText"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/email_confirmation_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintBottom_toTopOf="@id/codeVerificationTextBlock"/>

    <com.georgiyangeni.firstandroidapp.ui.emailconfirmation.VerificationCodeEditText
        android:id="@+id/codeVerificationTextBlock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:vcet_numberOfSlots="6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailConfirmationText"
        app:layout_constraintBottom_toTopOf="@id/emailConfirmationInfoText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emailConfirmationInfoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/codeVerificationTextBlock"
        app:layout_constraintBottom_toTopOf="@id/emailConfirmationButtons">

        <Button
            android:id="@+id/resendConfirmationCodeLinkButton"
            style="@style/Widget.FirstAndroidApp.Button.Special"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/resend_confirmation_code_template"
            android:enabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/resendConfirmationCodeTimer" />

        <TextView
            android:id="@+id/resendConfirmationCodeTimer"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resendConfirmationCodeLinkButton"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emailConfirmationButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/confirmCodeButton"
            style="@style/Widget.FirstAndroidApp.Button.Upper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/confirm_code_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/openMailApplicationButton"/>

        <Button
            android:id="@+id/openMailApplicationButton"
            style="@style/Widget.FirstAndroidApp.Button.Lower"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/open_mail_application_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmCodeButton"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>